--- a/example/index.html
+++ b/example/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Dear ImGui JavaScript+WebGL example</title>
+    <title>КурсОР - Курс на Образование и Развитие</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <script type="text/javascript" src="../node_modules/@flyover/system/build/system.js"></script> -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/flyover/system.ts/build/system.js"></script>
